2010-10-13  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/info.boot: Fix a bug with conditional type info.

2010-10-13  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/manip.spad.pamphlet,
	patching file src/interp/c-util.boot: Misc cleanups.

2010-10-13  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/clifford.spad.pamphlet,
	src/algebra/combfunc.spad.pamphlet,
	src/algebra/dirichlet.spad.pamphlet,
	src/algebra/export3D.spad.pamphlet,
	src/algebra/fspace.spad.pamphlet,
	src/algebra/intef.spad.pamphlet,
	src/algebra/integrat.spad.pamphlet,
	src/algebra/numarr.spad.pamphlet,
	src/algebra/rec.spad.pamphlet,
	src/algebra/tensor.spad.pamphlet: Whitespace cleanup.

2010-10-12  Martin Rubey  <martin.rubey@math.uni-hannover.de>

	* contrib/emacs/fricas.el: add LaTeX error handling to
	fricas-insert-TeX

2010-10-05  Martin Rubey  <martin.rubey@math.uni-hannover.de>

	* src/algebra/combfunc.spad.pamphlet,
	src/algebra/op.spad.pamphlet: hypergometric -> hypergeometric

2010-10-04  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/combfunc.spad.pamphlet,
	src/algebra/expr.spad.pamphlet,
	src/algebra/fspace.spad.pamphlet,
	src/algebra/op.spad.pamphlet,
	src/algebra/trigcat.spad.pamphlet: Add hypergeometric and Meijer
	functions.

2010-10-04  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/nruncomp.boot, src/interp/nrunfast.boot:
	Handle functions conditioned on %.

2010-10-04  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/liouv.spad.pamphlet: Fix dilog(1).

2010-09-28  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	Fixes SF 2536411.
	* src/algebra/efstruc.spad.pamphlet,
	src/algebra/integrat.spad.pamphlet,
	src/algebra/liouv.spad.pamphlet,
	src/algebra/op.spad.pamphlet: Better normaliztion of
	Liouvillian functions.

2010-09-28  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/efstruc.spad.pamphlet,
	src/algebra/integrat.spad.pamphlet: Normalize trigonometric
	constants.
