@@ -1,3 +1,8 @@
+2010-10-17  Martin Rubey  <martin.rubey@math.uni-hannover.de>
+
+	* contrib/emacs/fricas.el: improve startup and handling of
+	multiline input
+
 2010-10-13  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
 	* src/interp/info.boot: Fix a bug with conditional type info.
